# nju-clock-in

./: Cargo.toml  LICENSE  README.md  login-wisedu.js  rustfmt.toml
.cargo/: config
.github/workflows/: main.yml
js/: encrypt.js  login-wisedu.js
src/: auth.rs  main.rs  pcr.rs  push.rs
