[package]
name = "nju-clock-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
lazy_static = "1"
log = "0.4"
env_logger = "0.9"
regex = "1"
rand = "0.8"
aes = "0.7"
block-modes = "0.8"
base64 = "0.13"
serde_json = "1"
chrono = "0.4"
leptess = "0.13"